--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -917,10 +917,10 @@ PROV40;Dauphin;;;;;;;;;;;;;
 PROV9;Fort MacKenzie;;;;;;;;;;;;;
 PROV2626;Sakami;;;;;;;;;;;;;
 PROV59;Mistissini;;;;;;;;;;;;;
-PROV2140;Hermosillo;;;;;;;;;;;;;
-PROV2137;Nogales;;;;;;;;;;;;;
-PROV2143;El Paso del Norte;;;;;;;;;;;;;
-PROV2147;Ciudad Acuña;;;;;;;;;;;;;
+PROV2140;Haxöl Iihom;;;;;;;;;;;;;
+PROV2137;Cuquieratzi;;;;;;;;;;;;;
+PROV2143;Chihuahua;;;;;;;;;;;;;
+PROV2147;Lavón;;;;;;;;;;;;;
 PROV2171;Zihuatenejo;;;;;;;;;;;;;
 PROV103;Pueblo;;;;;;;;;;;;;
 PROV109;Cresto Cimarrón;;;;;;;;;;;;;
@@ -1378,4 +1378,7 @@ PROV3983;Selibabi;;;;;;;;;;;;;
 PROV3984;Iwalatan;;;;;;;;;;;;;
 PROV3985;Bakel;;;;;;;;;;;;;
 PROV3986;Marela;;;;;;;;;;;;;
+PROV4031;El Paso;;;;;;;;;;;;;
 PROV4059;Caborca;;;;;;;;;;;;;
+PROV4060;Julimes;;;;;;;;;;;;;
+PROV4061;Mayrán;;;;;;;;;;;;;
