--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -1663,7 +1663,7 @@ PROV3454;Puerto Trinidad;;;;;;;;;;;;;
 PROV3455;Cabo Mendocino;;;;;;;;;;;;;
 MEX_85_1;Alta California;;;;;;;;;;;;;
 MEX_85_2;California Central;;;;;;;;;;;;;
-PROV3456;Puerto Peñasco;;;;;;;;;;;;;
+PROV3456;Cuk Do'ag;;;;;;;;;;;;;
 PROV3457;Santa Rosa;;;;;;;;;;;;;
 PROV3458;Río Buenaventura;;;;;;;;;;;;;
 PROV3459;Desierto Aguasalada;;;;;;;;;;;;;
