--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10296,10 +10296,10 @@ PROV2134;Açores;;;;;;;;;;;;;
 PROV2135;Madeira;Madère;Madeira;;Madeira;;;;;;;;;
 PROV2136;Islas Canarias;Îles Canaries;Kanarische Inseln;;Islas Canarias;;;;;;;;;
 PROV2138;Loreto;Loreto;Loreto;;Loreto;;;;;;;;;
-PROV2139;Rosarito;Rosarito;Rosarito;;Rosarito;;;;;;;;;
+PROV2139;El Rosario;El Rosario;El Rosario;;El Rosario;;;;;;;;;
 PROV2141;Guaymas;Guaymas;Guaymas;;Guaymas;;;;;;;;;
-PROV2142;Chihuahua;Chihuahua;Chihuahua;;Chihuahua;;;;;;;;;
-PROV2144;Delicias;Delicias;Delicias;;Delicias;;;;;;;;;
+PROV2142;Dzilthdaklizh;Dzilthdaklizh;Dzilthdaklizh;;Dzilthdaklizh;;;;;;;;;
+PROV2144;Camargo;Camargo;Camargo;;Camargo;;;;;;;;;
 PROV2145;Parral;Parral;Parral;;Parral;;;;;;;;;
 PROV2149;Matamoros;Matamoros;Matamoros;;Matamoros;;;;;;;;;
 PROV2150;Ciudad Victoria;Ciudad Victoria;Ciudad Victoria;;Ciudad Victoria;;;;;;;;;
