RAM Dynamic Loc 3 (Regions)

--- a/GFM/localisation/___RAM.csv
+++ b/GFM/localisation/___RAM.csv
@@ -44,7 +44,7 @@ commabreak_state;,;;;;;;;;;;;;;
 tabbreak_state;    ;;;;;;;;;;;;;
 spacebreak_state; ;;;;;;;;;;;;;
 flexicommabreak_state;,;;;;;;;;;;;;;
-loc_and;and;;;;;;;;;;;;;
+loc_and;;;;;;;;;;;;;;
 fullstop_state;.;;;;;;;;;;;;;
 white;§W;;;;;;;;;;;;;
 blue;§B;;;;;;;;;;;;;
@@ -57,3 +57,4 @@ purple;§p;;;;;;;;;;;;;
 clear;§!;;;;;;;;;;;;;
 example_event_1;This event is an example of how Dynamic Loc can be applied.\n\n You are currently playing as;;;;;;;;;;;;;
 example_event_2;, and your capital is;;;;;;;;;;;;;
+example_event_3;, which is in the region of;;;;;;;;;;;;;
