--- a/GFM/localisation/00000_1830 loc.csv
+++ b/GFM/localisation/00000_1830 loc.csv
@@ -524,7 +524,7 @@ EVTDESC00027;On the ascension of Carlos VII, the fueros debate has come up once 
 EVTOPTA00027;Reform is needed with time.;;;;;;;;;;;;;
 EVTOPTB00027;MORE autonomy? No.;;;;;;;;;;;;;
 EVTNAME00028;Carlos VII's Solution;;;;;;;;;;;;;
-EVTDESC00028;With the increased autonomy granted to the fueros by the first reforms, Carlos VII has pressed forwards a reform program to finally evolve the Fueros system into a true autonomy granted to the Catalan and Basque. This will obviously render Madrid and the king both incapable of governing these provinces directly altogether, and will take a great deal of time to mitigate.;;;;;;;;;;;;;
+EVTDESC00028;With the increased autonomy granted to the fueros by the first reforms, Carlos VII has pressed forwards a reform program to finally evolve the Fueros system into the modern era. His scheme, a highly controversial plan, involves restoring the crown of Aragon onto the European world stage in its entirety, effectively devolving the Spanish crown once again into its composite states of Castille and Aragon. This concession, a full-scale recognition of Catalan and Aragonese statehood, can never be undone.;;;;;;;;;;;;;
 EVTOPTA00028;True freedom at last.;;;;;;;;;;;;;
 EVTOPTB00028;This is unnecessary. The Fueros will remain.;;;;;;;;;;;;;
 EVTNAME00029;The Fueros Debate;;;;;;;;;;;;;
