--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -2042,9 +2042,12 @@ SPC_absolute_monarchy;The Kingdom of Spain;;;;;;;;;;;;;
 SPC_prussian_constitutionalism;The Kingdom of Spain;;;;;;;;;;;;;
 SPC_hms_government;The Kingdom of Spain;;;;;;;;;;;;;
 SPC_ADJ;Spanish;;;;;;;;;;;;;
-SPC_absolute_empire;The Spanish Empire;;;;;;;;;;;;;
-SPC_semi_constitutional_empire;The Spanish Empire;;;;;;;;;;;;;
-SPC_constitutional_empire;The Spanish Empire;;;;;;;;;;;;;
+SPC_absolute_empire;Castile-Aragon;;;;;;;;;;;;;
+SPC_semi_constitutional_empire;Castile-Aragon;;;;;;;;;;;;;
+SPC_constitutional_empire;The United Kingdoms of Spain;;;;;;;;;;;;;
+SPC_absolute_empire_ADJ;Aragonese;;;;;;;;;;;;;
+SPC_semi_constitutional_empire_ADJ;Aragonese;;;;;;;;;;;;;
+SPC_constitutional_empire_ADJ;Aragonese;;;;;;;;;;;;;
 SPU;South Peru;;;;;;;;;;;;;
 SPU_ADJ;South Peruvian;;;;;;;;;;;;;
 SRD;Sardinia;;;;;;;;;;;;;
