--- a/GFM/localisation/00_HPM_modifiers.csv
+++ b/GFM/localisation/00_HPM_modifiers.csv
@@ -668,3 +668,5 @@ kanyenda_kingdom_desc;The current Maravi Confederation consists of 3 main states
 yao_raids;Yao Raids;;;;;;;;;;;;;
 yao_raids_desc;The East of our country is being raided by the Yao, formed by the peoples that live to our northeast and east, which is making the local economy collapse.;;;;;;;;;;;;;
 stop_asking_rgo;Failed Prospection;;;;;;;;;;;;;
+bureaucratic_inefficiency;Bureaucratic Inefficiency;;;;;;;;;;;;;
+bureaucratic_inefficiency_desc;Due to the current reforms of the government, the state's bureaucracy has been seemingly irrevocably damaged, plagued with inefficiencies and corruption.;;;;;;;;;;;;;
