region work (no mentions)

--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -1,6 +1,7 @@
 Key;English;French;German;Polish;Spanish;Italian;Swedish;Czech;Hungarian;
 sugar_RGO_SIZE;Sugarcane plantation size;;;;;;;;;
 sugar;Sugar;;;;;;;;;
+BRZ_2457;Paraná & Santa Catharina;;;;;;;;;
 PROV2446;São João D'el-Rey;;;;;;;;;
 PROV2449;Victória;;;;;;;;;
 PROV2462;Kreie-bang-rê;;;;;;;;;
