partial native names

--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -75,7 +75,6 @@ PROV4023;Inihta;;;;;;;;;
 PROV4024;Ñumbyte;;;;;;;;;
 PROV4022;Santa Cruz;;;;;;;;;
 PROV4000;Ponta Grossa;;;;;;;;;
-PROV3987;Paraná;;;;;;;;;
 PROV3988;Ladário;;;;;;;;;
 PROV3989;Melgaço;;;;;;;;;
 PROV3990;Casalvasco;;;;;;;;;
@@ -94,6 +93,16 @@ PROV4002;Cauaburi;;;;;;;;;
 PROV2554;Jatimi-Ara Porá;;;;;;;;;
 PROV4029;Merseburg;;;;;;;;;
 PROV4030;Käkisalmi;;;;;;;;;
+PROV2458;Agûarápuaba;;;;;;;;;
+PROV2460;Ipáuzandu;;;;;;;;;
+PROV2453;Arasátyba;;;;;;;;;
+PROV3987;Bataguaçu;;;;;;;;;
+PROV2419;Anhanduhy;;;;;;;;;
+PROV2418;Cuyaverá;;;;;;;;;
+PROV2423;Akwe krikahâzawre wam hã;;;;;;;;;
+PROV2425;Karaîá'y;;;;;;;;;
+PROV2417;Aripuanã;;;;;;;;;
+PROV2550;Guamporé;;;;;;;;;
 AUS_702;Westgalizien;;;;;;;;;
 RGS;Rio-Grandense Republic;;;;;;;;;
 DES_theocracy;The Theodemocracy of Zion;;;;;;;;;
