just some names

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -358,9 +358,9 @@ PROV52;Orillia;;;;;;;;;;;;;
 PROV75;Port-Aux-Basques;;;;;;;;;;;;;
 PROV69;Petit-Sault;;;;;;;;;;;;;
 PROV683;Waldenburg;;;;;;;;;;;;;
-PROV43;Clarksville;;;;;;;;;;;;;
-PROV134;Fort Parker;;;;;;;;;;;;;
-PROV135;Llano Estacado;;;;;;;;;;;;;
+PROV43;Nabiti;;;;;;;;;;;;;
+PROV134;Ebi Hunu'bi;;;;;;;;;;;;;
+PROV135;Wewap;;;;;;;;;;;;;
 PROV85;Sonoma;;;;;;;;;;;;;
 FRA_1901;Houet;;;;;;;;;;;;;
 FRA_1904;Gurma;;;;;;;;;;;;;
@@ -385,7 +385,7 @@ PROV120;Fort Kiowa;;;;;;;;;;;;;
 PROV114;Fort Owen;;;;;;;;;;;;;
 PROV115;Fort Benton;;;;;;;;;;;;;
 PROV116;Fort Van Buren;;;;;;;;;;;;;
-PROV131;Fort Washita;;;;;;;;;;;;;
+PROV131;Tusohokwehunu'bi;;;;;;;;;;;;;
 PROV130;Fort Gibson;;;;;;;;;;;;;
 PROV111;Fort Bonneville;;;;;;;;;;;;;
 PROV112;Fort Laramie;;;;;;;;;;;;;
@@ -901,7 +901,7 @@ BAV_595;Franken;;;;;;;;;;;;;
 PRU_684;Upper Silesia;;;;;;;;;;;;;
 PROV79;Fort Vancouver;;;;;;;;;;;;;
 PROV18;Dawson's Creek;;;;;;;;;;;;;
-PROV129;Guymon;;;;;;;;;;;;;
+PROV129;Piakwasiahunu'bi;;;;;;;;;;;;;
 PROV128;Hugoton;;;;;;;;;;;;;
 PROV638;Eperies;;;;;;;;;;;;;
 AUS_625;Böhmen;;;;;;;;;;;;;
@@ -1379,6 +1379,13 @@ PROV3984;Iwalatan;;;;;;;;;;;;;
 PROV3985;Bakel;;;;;;;;;;;;;
 PROV3986;Marela;;;;;;;;;;;;;
 PROV4031;El Paso;;;;;;;;;;;;;
+PROV4032;San Vicente;;;;;;;;;;;;;
+PROV4033;Albuquerque;;;;;;;;;;;;;
+PROV4034;Santa Fe;;;;;;;;;;;;;
+PROV4035;Tïkamïkatï;;;;;;;;;;;;;
+PROV4052;Tucsón;;;;;;;;;;;;;
 PROV4059;Caborca;;;;;;;;;;;;;
 PROV4060;Julimes;;;;;;;;;;;;;
 PROV4061;Mayrán;;;;;;;;;;;;;
+PROV4062;Wohihu;;;;;;;;;;;;;
+PROV4063;Nanatsoho;;;;;;;;;;;;;
