--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -99,10 +99,14 @@ PROV2453;Arasátyba;;;;;;;;;
 PROV3987;Bataguaçu;;;;;;;;;
 PROV2419;Anhanduhy;;;;;;;;;
 PROV2418;Cuyaverá;;;;;;;;;
-PROV2423;Akwe krikahâzawre wam hã;;;;;;;;;
+PROV2423;Krikahâzawre;;;;;;;;;
 PROV2425;Karaîá'y;;;;;;;;;
 PROV2417;Aripuanã;;;;;;;;;
 PROV2550;Guamporé;;;;;;;;;
+PROV3749;Tukuru'y;;;;;;;;;
+PROV2413;Para'ypeb;;;;;;;;;
+PROV2600;Bytí;;;;;;;;;
+PROV2405;Uru'ará;;;;;;;;;
 AUS_702;Westgalizien;;;;;;;;;
 RGS;Rio-Grandense Republic;;;;;;;;;
 DES_theocracy;The Theodemocracy of Zion;;;;;;;;;
