--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -16,8 +16,6 @@ PROV3584;Planalto;;;;;;;;;
 PROV1049;Anapa;;;;;;;;;
 PROV2532;Uraricoera;;;;;;;;;
 PROV2443;Diamantina;;;;;;;;;
-PROV2407;Ilha de Bragança;;;;;;;;;
-PROV2415;Forte de Tauregue;;;;;;;;;
 PROV2986;Abrolhos Archipelago;;;;;;;;;
 PROV2988;Riograndense Coast;;;;;;;;;
 RUS_968;Podolye;;;;;;;;;
@@ -40,7 +38,6 @@ PROV3618;Chuí;;;;;;;;;
 PROV3642;Merim;;;;;;;;;
 PROV3643;Lagoa dos Patos;;;;;;;;;
 PROV3644;Colonia;;;;;;;;;
-PROV2418;Cuyabá;;;;;;;;;
 BRZ_2416;Matto Grosso;;;;;;;;;
 BRZ_2421;Goyaz;;;;;;;;;
 BRZ_2446_1;Minas Geraes;;;;;;;;;
@@ -60,9 +57,6 @@ PROV2445;Uberaba;;;;;;;;;
 PROV2444;Paracatu;;;;;;;;;
 PROV3445;Itabira;;;;;;;;;
 PROV3446;Rio Pardo de Minas;;;;;;;;;
-PROV3651;Teffé;;;;;;;;;
-PROV3652;Olivença;;;;;;;;;
-PROV2404;Madeira;;;;;;;;;
 PROV3653;Tapanahony;;;;;;;;;
 PROV3654;Auburn;;;;;;;;;
 PROV3655;Greenville;;;;;;;;;
@@ -107,6 +101,19 @@ PROV3749;Tukuru'y;;;;;;;;;
 PROV2413;Para'ypeb;;;;;;;;;
 PROV2600;Bytí;;;;;;;;;
 PROV2405;Uru'ará;;;;;;;;;
+PROV2427;'Yruçuí;;;;;;;;;
+PROV2421;Berohoky;;;;;;;;;
+PROV3382;Îakaré;;;;;;;;;
+PROV2407;Araguár'y;;;;;;;;;
+PROV2415;Kamaruamã;;;;;;;;;
+PROV3652;Iauarí;;;;;;;;;
+PROV3651;Uru'ku;;;;;;;;;
+PROV3750;Wakari-kwára;;;;;;;;;
+PROV2403;Ya'ú;;;;;;;;;
+PROV2408;Eruzu-M'Na;;;;;;;;;
+PROV2567;Iauaretê;;;;;;;;;
+PROV4077;Viera Grande;;;;;;;;;
+PROV4078;Curuai;;;;;;;;;
 AUS_702;Westgalizien;;;;;;;;;
 RGS;Rio-Grandense Republic;;;;;;;;;
 DES_theocracy;The Theodemocracy of Zion;;;;;;;;;
