Tams~ paraguay names
Co-authored-by: Tamakii~ <78432034+Tamakii-2005@users.noreply.github.com>

--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -114,6 +114,10 @@ PROV2408;Eruzu-M'Na;;;;;;;;;
 PROV2567;Iauaretê;;;;;;;;;
 PROV4077;Viera Grande;;;;;;;;;
 PROV4078;Curuai;;;;;;;;;
+PROV2340;Pilar;;;;;;;;;
+PROV2341;San Cosme;;;;;;;;;
+PROV2342;Villarrica;;;;;;;;;
+PROV2343;San Pedro;;;;;;;;;
 AUS_702;Westgalizien;;;;;;;;;
 RGS;Rio-Grandense Republic;;;;;;;;;
 DES_theocracy;The Theodemocracy of Zion;;;;;;;;;
