everything south to tehuantepec is done

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -920,7 +920,7 @@ PROV59;Mistissini;;;;;;;;;;;;;
 PROV2140;Haxöl Iihom;;;;;;;;;;;;;
 PROV2137;Cuquieratzi;;;;;;;;;;;;;
 PROV2143;Chihuahua;;;;;;;;;;;;;
-PROV2147;Lavón;;;;;;;;;;;;;
+PROV2147;Kú’ne Tsá;;;;;;;;;;;;;
 PROV2171;Zihuatenejo;;;;;;;;;;;;;
 PROV103;Pueblo;;;;;;;;;;;;;
 PROV109;Cresto Cimarrón;;;;;;;;;;;;;
@@ -1385,7 +1385,7 @@ PROV4034;Santa Fe;;;;;;;;;;;;;
 PROV4035;Tïkamïkatï;;;;;;;;;;;;;
 PROV4052;Tucsón;;;;;;;;;;;;;
 PROV4059;Caborca;;;;;;;;;;;;;
-PROV4060;Julimes;;;;;;;;;;;;;
-PROV4061;Mayrán;;;;;;;;;;;;;
+PROV4060;Iké'yú Tú'ichii;;;;;;;;;;;;;
+PROV4061;Yritila;;;;;;;;;;;;;
 PROV4062;Wohihu;;;;;;;;;;;;;
 PROV4063;Nanatsoho;;;;;;;;;;;;;
