--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -730,11 +730,9 @@ BRU_1397;Sabah;;;;;;;;;;;;;
 PROV3585;Simanggang;;;;;;;;;;;;;
 PROV3586;Marudi;;;;;;;;;;;;;
 PROV3587;Limbang;;;;;;;;;;;;;
-PROV3588;Sipitang;;;;;;;;;;;;;
 NET_1413;West Java;;;;;;;;;;;;;
 NET_1418;East Java;;;;;;;;;;;;;
 NET_1423;East Borneo;;;;;;;;;;;;;
-PROV3589;Nunukan;;;;;;;;;;;;;
 NET_1426;South Borneo;;;;;;;;;;;;;
 NET_1446;Timor;;;;;;;;;;;;;
 NET_1447;Moluccas;;;;;;;;;;;;;
@@ -857,7 +855,7 @@ PROV107;Sierra Madre;;;;;;;;;;;;;
 PROV108;Gran Mesa;;;;;;;;;;;;;
 PROV104;Yerba Buena;;;;;;;;;;;;;
 PROV2146;D.C.;;;;;;;;;;;;;
-PROV2148;Albuquerque;;;;;;;;;;;;;
+PROV2148;Halona Idiwan’a;;;;;;;;;;;;;
 PROV231;Camden;;;;;;;;;;;;;
 UCA_2191;El Salvador;;;;;;;;;;;;;
 UCA_2193;Honduras;;;;;;;;;;;;;
@@ -924,7 +922,7 @@ PROV2147;Kú’ne Tsá;;;;;;;;;;;;;
 PROV2171;Zihuatenejo;;;;;;;;;;;;;
 PROV103;Pueblo;;;;;;;;;;;;;
 PROV109;Cresto Cimarrón;;;;;;;;;;;;;
-PROV105;Santa Fe;;;;;;;;;;;;;
+PROV105;Tukumakuru;;;;;;;;;;;;;
 PROV218;Wheeling;;;;;;;;;;;;;
 PROV217;Green Bank;;;;;;;;;;;;;
 PROV2187;La Mesilla;;;;;;;;;;;;;
