--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -1667,7 +1667,7 @@ PROV3456;Cuk Do'ag;;;;;;;;;;;;;
 PROV3457;Santa Rosa;;;;;;;;;;;;;
 PROV3458;RÌo Buenaventura;;;;;;;;;;;;;
 PROV3459;Desierto Aguasalada;;;;;;;;;;;;;
-PROV3460;Ganado;;;;;;;;;;;;;
+PROV3460;Ad·· Dik'·;;;;;;;;;;;;;
 PROV3461;Warm Springs;;;;;;;;;;;;;
 PROV3462;Siuslaw;;;;;;;;;;;;;
 PROV3463;Princeton;;;;;;;;;;;;;
