--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -8703,7 +8703,7 @@ PROV96;Las Vegas;Las Vegas;Las Vegas;;Las Vegas;;;;;;;;;
 PROV97;Ciudad Aguasalada;Ciudad Aguasalada;Ciudad Aguasalada;;Ciudad Aguasalada;;;;;;;;;
 PROV99;Escalante;Escalante;Escalante;;Escalante;;;;;;;;;
 PROV100;Ligai Si'án;Ligai Si'án;Ligai Si'án;;Ligai Si'án;;;;;;;;;
-PROV101;Borde Mogollón;Borde Mogollón;Borde Mogollón;;Borde Mogollón;;;;;;;;;
+PROV101;Teki'aulva;Teki'aulva;Teki'aulva;;Teki'aulva;;;;;;;;;
 PROV102;Nchaa Sí'an;Nchaa Sí'an;Nchaa Sí'an;;Nchaa Sí'an;;;;;;;;;
 PROV132;Houston;Houston;Houston;;Houston;;;;;;;;;
 PROV133;Waterloo;Waterloo;Waterloo;;Waterloo;;;;;;;;;
