--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -386,7 +386,7 @@ PROV114;Fort Owen;;;;;;;;;;;;;
 PROV115;Fort Benton;;;;;;;;;;;;;
 PROV116;Fort Van Buren;;;;;;;;;;;;;
 PROV131;Tusohokwehunu'bi;;;;;;;;;;;;;
-PROV130;Fort Gibson;;;;;;;;;;;;;
+PROV130;Tha'tse Mathi';;;;;;;;;;;;;
 PROV111;Fort Bonneville;;;;;;;;;;;;;
 PROV112;Fort Laramie;;;;;;;;;;;;;
 PROV106;Bent's Fort;;;;;;;;;;;;;
@@ -1381,6 +1381,8 @@ PROV4032;San Vicente;;;;;;;;;;;;;
 PROV4033;Albuquerque;;;;;;;;;;;;;
 PROV4034;Santa Fe;;;;;;;;;;;;;
 PROV4035;Tïkamïkatï;;;;;;;;;;;;;
+PROV4036;Fort Gibson;;;;;;;;;;;;;
+PROV4043;Nyút'ach;;;;;;;;;;;;;
 PROV4052;Tucsón;;;;;;;;;;;;;
 PROV4059;Caborca;;;;;;;;;;;;;
 PROV4060;Iké'yú Tú'ichii;;;;;;;;;;;;;
