--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -8720,7 +8720,7 @@ PROV145;Fayetteville;Fayetteville;Fayetteville;;Fayetteville;;;;;;;;;
 PROV146;St Louis;St Louis;St Louis;;St. Louis;;;;;;;;;
 PROV147;Joplin;Joplin;Joplin;;Joplin;;;;;;;;;
 PROV148;Malden;Malden;Malden;;Malden;;;;;;;;;
-PROV149;Jefferson City;Jefferson City;Jefferson City;;Jefferson City;;;;;;;;;
+PROV149;Mixa Sga'hü;Mixa Sga'hü;Mixa Sga'hü;;Mixa Sga'hü;;;;;;;;;
 PROV150;Kansas City;Kansas City;Kansas City;;Kansas City;;;;;;;;;
 PROV151;Des Moines;Des Moines;Des Moines;;Des Moines;;;;;;;;;
 PROV152;Oskaloosa;Oskaloosa;Oskaloosa;;Oskaloosa;;;;;;;;;
