--- a/GFM/localisation/0000_Jupiter.csv
+++ b/GFM/localisation/0000_Jupiter.csv
@@ -1,12 +1,12 @@
 Key;English;French;German;Polish;Spanish;Italian;Swedish;Czech;Hungarian;Dutch;Portuguese;Russian;Finnish;
 core_loango_title;Claim Loango;;;;;;;;;;;;
-core_loango_desc;Â§RGain 3 infamyÂ§! Loango has been a nuisance for all of our existence, always helping insurgences in the north and blocking trade with our brothers further north. They don't deserve a country for themselves and must be brought under our control else they continue to be a pest to the region and the world. Now that its former territory is ours, it's time to formally proclaim them a state of ours.;;;;;;;;;;;;
+core_loango_desc;§RGain 3 infamy§! Loango has been a nuisance for all of our existence, always helping insurgences in the north and blocking trade with our brothers further north. They don't deserve a country for themselves and must be brought under our control else they continue to be a pest to the region and the world. Now that its former territory is ours, it's time to formally proclaim them a state of ours.;;;;;;;;;;;;
 core_north_title;Conquer the North;;;;;;;;;;;;
-core_north_desc;Â§RGain 5 infamyÂ§! Now that Loango is firmly under our empire and we have the European technology needed to do so, it's time to reign over the North. Our brothers and sisters have been unorganized for ages, and will probably be pleased to be under our rule. To the North!;;;;;;;;;;;;
+core_north_desc;§RGain 5 infamy§! Now that Loango is firmly under our empire and we have the European technology needed to do so, it's time to reign over the North. Our brothers and sisters have been unorganized for ages, and will probably be pleased to be under our rule. To the North!;;;;;;;;;;;;
 kongowar_portugal_title;Free the Bantu in Angola;;;;;;;;;;;;
-kongowar_portugal_desc;Â§RGain 5 infamyÂ§! Now that we are catching on technologically and militarily to our neighbor Portugal, it's time to free ourselves from their influence and free our cousins to the South from the colonizers that have oppressed them for now centuries. God bless our great Empire! God bless Kongo! To arms! Â§RSTART A WAR WITH PORTUGALÂ§W;;;;;;;;;;;;
+kongowar_portugal_desc;§RGain 5 infamy§! Now that we are catching on technologically and militarily to our neighbor Portugal, it's time to free ourselves from their influence and free our cousins to the South from the colonizers that have oppressed them for now centuries. God bless our great Empire! God bless Kongo! To arms! §RSTART A WAR WITH PORTUGAL§W;;;;;;;;;;;;
 kongowar_won_title;Victory in Angola!;;;;;;;;;;;;
-kongowar_won_desc;Â§RGain 5 infamyÂ§! After a bloody war, we have freed our cousins and established our reign over the region. We are now the greatest kingdom in Africa. God bless our greater kingdom! God bless Kongo!;;;;;;;;;;;;
+kongowar_won_desc;§RGain 5 infamy§! After a bloody war, we have freed our cousins and established our reign over the region. We are now the greatest kingdom in Africa. God bless our greater kingdom! God bless Kongo!;;;;;;;;;;;;
 OYO_absolute_empire;Iseyin;;;;;;;;;;;;
 OYO_absolute_empire_ADJ;Iseyini;;;;;;;;;;;;
 OYO_semi_constitutional_empire;Iseyin;;;;;;;;;;;;
@@ -19,22 +19,22 @@ OYO_colonial_company;Yorubaland;;;;;;;;;;;;
 OYO_fascist_dictatorship;Yoruba Proper;;;;;;;;;;;;
 OYOCAPITAL;Oyo has been the capital of our kingdom since ancient times but the capture of it by the Fulanis changed that. With Oyo Ile again part of our nation the question of moving the capital there once again is reassonable.;;;;;;;;;;;;;
 claim_north_oyo_title;Claim Northern Lands;;;;;;;;;;;;
-claim_north_oyo_desc;Â§RGain 3 infamyÂ§! With the Fulanis support of the Ilorin traitor it is our mission to protect our northern border so such can never happen again.;;;;;;;;;;;;
+claim_north_oyo_desc;§RGain 3 infamy§! With the Fulanis support of the Ilorin traitor it is our mission to protect our northern border so such can never happen again.;;;;;;;;;;;;
 reclaim_dahomey_title;Reclaim Dahomey;;;;;;;;;;;;
-reclaim_dahomey_desc;Â§RGain 3 infamyÂ§! Dahomey had been part of the Oyo Empire a few decades ago. With our other lands under our control again, it's our duty to put the Dahomey in their place, as we are the protectors of the Yoruba.;;;;;;;;;;;;
+reclaim_dahomey_desc;§RGain 3 infamy§! Dahomey had been part of the Oyo Empire a few decades ago. With our other lands under our control again, it's our duty to put the Dahomey in their place, as we are the protectors of the Yoruba.;;;;;;;;;;;;
 declare_empire_title;Redeclare the Empire;;;;;;;;;;;;
-declare_empire_desc;Â§RGain 7 infamyÂ§! With all of our former lands under our control we shall reinstate the empire we once were under our rule.;;;;;;;;;;;;
+declare_empire_desc;§RGain 7 infamy§! With all of our former lands under our control we shall reinstate the empire we once were under our rule.;;;;;;;;;;;;
 claim_greater_oyo_title;Claim Greater Oyo;;;;;;;;;;;;
-claim_greater_oyo_desc;Â§RGain 7 infamyÂ§! With all of our lands under our dominion, we shall claim our borderlands in the name of Yoruban glory!;;;;;;;;;;;;
+claim_greater_oyo_desc;§RGain 7 infamy§! With all of our lands under our dominion, we shall claim our borderlands in the name of Yoruban glory!;;;;;;;;;;;;
 arabic_writing_system_title;Use the Arabic Writing System;;;;;;;;;;;;
 arabic_writing_system_desc;The Arabic writing system has been used throughout the country and it isn't insane to think that we could use it officially.;;;;;;;;;;;;
 accept_volta_niger_title;Volta Niger Hegemon;;;;;;;;;;;;
-accept_volta_niger_desc;Â§RGain 15 infamyÂ§! We've successfully claimed all of our region. Our neighboring cultures could join us to make our empire greater!;;;;;;;;;;;;
+accept_volta_niger_desc;§RGain 15 infamy§! We've successfully claimed all of our region. Our neighboring cultures could join us to make our empire greater!;;;;;;;;;;;;
 OYO;Oyo;Oyo;Oyo;;Oyo;;;;;;;;;
 OYO_ADJ;Yoruban;Oyo;Oyo;;;;;;;;;;;
 OYO_conservative;Alaafin's Egbe;Egbe Alaafin;Alaafins Fraktion;;;;;;;;;;;
 OYO_liberal;Oyo Mausi Egbe;Egbe de Alejin;Verbesserung Fraktion;;;;;;;;;;;
-OYO_reactionary;Ibile Egbe;Egbe ibile;MilitÃ¤rische Fraktion;;;;;;;;;;;
+OYO_reactionary;Ibile Egbe;Egbe ibile;Militärische Fraktion;;;;;;;;;;;
 OYO_radical;Iyato Egbe;Egbe radicale;Die radikale Fraktion;;;;;;;;;;;
 EGBA_conservative;Alake's Egbe;;;;;;;;;;;;;
 EGBA_liberal;Egbado Faction;;;;;;;;;;;;;
