--- a/GFM/localisation/0000_Sea_Provinces.csv
+++ b/GFM/localisation/0000_Sea_Provinces.csv
@@ -52,7 +52,7 @@ PROV2835;Shelikhov Gulf;;;;;;;;;;;;;
 PROV2834;Northern Sea of Okhotsk;;;;;;;;;;;;;
 PROV2836;Central Sea of Okhotsk;;;;;;;;;;;;;
 PROV2839;Southern Sea of Okhotsk;;;;;;;;;;;;;
-PROV3579;La P√©rouse Strait;;;;;;;;;;;;;
+PROV3579;La PÈrouse Strait;;;;;;;;;;;;;
 PROV3580;Tatar Strait;;;;;;;;;;;;;
 PROV2837;Gulf of Suez;;;;;;;;;;;;;
 PROV2783;Bab-el-Mandeb;;;;;;;;;;;;;
@@ -66,7 +66,7 @@ PROV2825;Taiwan Strait;;;;;;;;;;;;;
 PROV2826;Western East China Sea;;;;;;;;;;;;;
 PROV2845;Eastern East China Sea;;;;;;;;;;;;;
 PROV3582;Chandeleur Sound;;;;;;;;;;;;;
-PROV3583;Yucat√°n Channel;;;;;;;;;;;;;
+PROV3583;Yucat·n Channel;;;;;;;;;;;;;
 PROV2963;Bay of Campeche;;;;;;;;;;;;;
 PROV2962;Western Gulf of Mexico;;;;;;;;;;;;;
 PROV2964;Campeche Bank;;;;;;;;;;;;;
@@ -140,10 +140,10 @@ PROV3025;Bermuda Sea;;;;;;;;;;;;;
 PROV3026;Wyoming Seamount;;;;;;;;;;;;;
 PROV2934;Reykjanes Ridge;;;;;;;;;;;;;
 PROV2929;Rosengarten Bank;;;;;;;;;;;;;
-PROV3024;Garc√≠a Knoll;;;;;;;;;;;;;
+PROV3024;GarcÌa Knoll;;;;;;;;;;;;;
 PROV3909;Saimaa;;;;;;;;;;;;;
-PROV3910;P√§ij√§nne;;;;;;;;;;;;;
+PROV3910;P‰ij‰nne;;;;;;;;;;;;;
 PROV3911;Nasijarv;;;;;;;;;;;;;
 PROV3912;Lake Ilmen;;;;;;;;;;;;;
 PROV2715;Lake Onega;;;;;;;;;;;;;
-PROV3101;S√°dea;;;;;;;;;;;;;
+PROV3101;S·dea;;;;;;;;;;;;;
