--- a/GFM/localisation/___RAM.csv
+++ b/GFM/localisation/___RAM.csv
@@ -46,15 +46,15 @@ spacebreak_state; ;;;;;;;;;;;;;
 flexicommabreak_state;,;;;;;;;;;;;;;
 loc_and;;;;;;;;;;;;;;
 fullstop_state;.;;;;;;;;;;;;;
-white;Â§W;;;;;;;;;;;;;
-blue;Â§B;;;;;;;;;;;;;
-green;Â§G;;;;;;;;;;;;;
-red;Â§R;;;;;;;;;;;;;
-black;Â§b;;;;;;;;;;;;;
-grey;Â§g;;;;;;;;;;;;;
-yellow;Â§Y;;;;;;;;;;;;;
-purple;Â§p;;;;;;;;;;;;;
-clear;Â§!;;;;;;;;;;;;;
+white;§W;;;;;;;;;;;;;
+blue;§B;;;;;;;;;;;;;
+green;§G;;;;;;;;;;;;;
+red;§R;;;;;;;;;;;;;
+black;§b;;;;;;;;;;;;;
+grey;§g;;;;;;;;;;;;;
+yellow;§Y;;;;;;;;;;;;;
+purple;§p;;;;;;;;;;;;;
+clear;§!;;;;;;;;;;;;;
 example_event_1;This event is an example of how Dynamic Loc can be applied.\n\n You are currently playing as;;;;;;;;;;;;;
 example_event_2;, and your capital is;;;;;;;;;;;;;
 example_event_3;, which is in the region of;;;;;;;;;;;;;
