--- a/GFM/localisation/000_persia_map.csv
+++ b/GFM/localisation/000_persia_map.csv
@@ -2,7 +2,7 @@ Key;English;French;German;Polish;Spanish;Italian;Swedish;Czech;Hungarian;Dutch;P
 east_indies;East Indies;;;;;;;;;;;;;
 AUS_628;Sudetenland;;;;;;;;;;;;;
 RUS_945;Vitebsk;;;;;;;;;;;;;
-RUS_947;GÃ³mel;;;;;;;;;;;;;
+RUS_947;Gómel;;;;;;;;;;;;;
 RUS_964;Taurida;;;;;;;;;;;;;
 RUS_968;Podolia;;;;;;;;;;;;;
 RUS_977;Voronezh;;;;;;;;;;;;;
@@ -38,7 +38,7 @@ ENG_1825;Kanem;;;;;;;;;;;;;
 FRA_2406;Desolation Islands;;;;;;;;;;;;;
 PROV629;Tachau;;;;;;;;;;;;;
 PROV630;Krumau;;;;;;;;;;;;;
-PROV631;BrÃ¼nn;;;;;;;;;;;;;
+PROV631;Brünn;;;;;;;;;;;;;
 PROV632;Zwittau;;;;;;;;;;;;;
 PROV637;Kaschau;;;;;;;;;;;;;
 PROV657;Hermannstadt;;;;;;;;;;;;;
@@ -148,7 +148,7 @@ PROV1594;Kashgar;;;;;;;;;;;;;
 PROV1716;Tindouf;;;;;;;;;;;;;
 PROV1717;Bouira;;;;;;;;;;;;;
 PROV901;al-Hasakha;;;;;;;;;;;;;
-PROV904;InÃ­rida;;;;;;;;;;;;;
+PROV904;Inírida;;;;;;;;;;;;;
 PROV924;Zakho;;;;;;;;;;;;;
 PROV907;al-Bawda;;;;;;;;;;;;;
 PROV864;Karesi;;;;;;;;;;;;;
@@ -182,7 +182,7 @@ PROV2607;Charklik;;;;;;;;;;;;;
 PROV2609;Arawan;;;;;;;;;;;;;
 PROV2619;Sasyr;;;;;;;;;;;;;
 PROV2622;Bar-le-Duc;;;;;;;;;;;;;
-PROV449;NÃ®mes;;;;;;;;;;;;;
+PROV449;Nîmes;;;;;;;;;;;;;
 PROV2637;Sandai;;;;;;;;;;;;;
 PROV2640;Gwadar;;;;;;;;;;;;;
 PROV2649;Wadjo;;;;;;;;;;;;;
