--- a/GFM/localisation/00_GFM_Terrains.csv
+++ b/GFM/localisation/00_GFM_Terrains.csv
@@ -35,10 +35,10 @@ montane_forest;Montane Forest;;;;;;;;;;;;;
 savanna;Savanna;;;;;;;;;;;;;
 floodplain_farmland;Floodplain Farmlands;;;;;;;;;;;;;
 jungle_farmland;Jungle Farmlands;Terres Arables Jungle;Dschungel Ackerland;;Jungla Tierras de Cultivo;;;;;;;;;
-semi_desert_mountains;Semi-Desert Mountains;Semi-DÃ©sertiques Montagnes;HalbwÃ¼ste Berge;;SemidesÃ©rticas MontaÃ±as;;;;;;;;;
-new_world_semi_desert_mountains;Semi-Desert Mountains;Semi-DÃ©sertiques Montagnes;HalbwÃ¼ste Berge;;SemidesÃ©rticas MontaÃ±as;;;;;;;;;
-jungle_hills;Jungle Hills;Collines Jungle;Dschungel HÃ¼gel;;Jungla Colinas;;;;;;;;;
-jungle_mountains;Jungle Mountains;Montagnes Jungle;Dschungel Berge;;MontaÃ±as Jungla;;;;;;;;;
+semi_desert_mountains;Semi-Desert Mountains;Semi-Désertiques Montagnes;Halbwüste Berge;;Semidesérticas Montañas;;;;;;;;;
+new_world_semi_desert_mountains;Semi-Desert Mountains;Semi-Désertiques Montagnes;Halbwüste Berge;;Semidesérticas Montañas;;;;;;;;;
+jungle_hills;Jungle Hills;Collines Jungle;Dschungel Hügel;;Jungla Colinas;;;;;;;;;
+jungle_mountains;Jungle Mountains;Montagnes Jungle;Dschungel Berge;;Montañas Jungla;;;;;;;;;
 guatemala;Farmlands;;;;;;;;;;;;;
 san_jose;Jungle;;;;;;;;;;;;;
 salvador;Farmlands;;;;;;;;;;;;;
