--- a/GFM/localisation/00_NNM_countries.csv
+++ b/GFM/localisation/00_NNM_countries.csv
@@ -59,17 +59,17 @@ DUR_prussian_constitutionalism_ADJ;Durrani;;;;;;;;;;;;;
 DUR_hms_government_ADJ;Durrani;;;;;;;;;;;;;
 ENT_anarcho_liberal;Partido Radical;;;;;;;;;;;;;
 ERT_anarcho_liberal;The Radical Faction;;;;;;;;;;;;;
-FIU_radical_republic;Italian Regency of Carnaro;RÂ‚gence italienne du Carnaro;Italienische Regentschaft am Quarnero;;;;;;;;;;;
+FIU_radical_republic;Italian Regency of Carnaro;R?gence italienne du Carnaro;Italienische Regentschaft am Quarnero;;;;;;;;;;;
 FIU_anarcho_liberal;Radicali;Radical;Radikal;;;;;;;;;;;
-FJN_anarcho_liberal;Freedom Party;Parti de la libertÃ©;Freiheitspartei;;;;;;;;;;;;
+FJN_anarcho_liberal;Freedom Party;Parti de la liberté;Freiheitspartei;;;;;;;;;;;;
 FSM_anarcho_liberal;Radical Party;Radical Party;Radical Party;;;;;;;;;;;
 GLC_anarcho_liberal;Partido Radical;Partido Radical;Partido Radical;;;;;;;;;;;
-GNG_anarcho_liberal;Freedom Party;Parti de la libertÃ©;Freiheitspartei;;;;;;;;;;;;
+GNG_anarcho_liberal;Freedom Party;Parti de la liberté;Freiheitspartei;;;;;;;;;;;;
 GUY_anarcho_liberal;American Faction;;;;;;;;;;;;;
 HAL_anarcho_liberal;Al Anarkiliberali;;;;;;;;;;;;;
-HNN_anarcho_liberal;Freedom Party;Parti de la libertÃ©;Freiheitspartei;;;;;;;;;;;;
+HNN_anarcho_liberal;Freedom Party;Parti de la liberté;Freiheitspartei;;;;;;;;;;;;
 HOL_anarcho_liberal;Radicale Partij;;;;;;;;;;;;;
-HUI_anarcho_liberal;Freedom Party;Parti de la libertÃ©;Freiheitspartei;;;;;;;;;;;;
+HUI_anarcho_liberal;Freedom Party;Parti de la liberté;Freiheitspartei;;;;;;;;;;;;
 INO_anarcho_liberal;Partai Nasdem;;;;;;;;;;;;;
 IOM_anarcho_liberal;Positive Action Group;Positive Action Group;Positive Action Group;;Positive Action Group;;;;;;;;;
 ITA_anarcho_liberal;Estrema Sinistra Liberale;Estrema Sinistra Liberale;Estrema Sinistra Liberale;;Estrema Sinistra Liberale;;;;;;;;;
@@ -77,12 +77,12 @@ JAM_anarcho_liberal;Radical Party;Radical Party;Radical Party;;;;;;;;;;;
 JAP_anarcho_liberal;Ishin Seito Shimpu;Faction radicale;Radikale Fraktion;;;;;;;;;;;
 JNG_anarcho_liberal;Anarchist Faction;Anarchist Faction;Anarchist Faction;;Anarchist Faction;;;;;;;;;
 JOR_anarcho_liberal;Al Anarkiliberali;;;;;;;;;;;;;
-KAZ_conservative;The Conservatives;Faction royale;KÃ¶nigsfraktion;;;;;;;;;;;
+KAZ_conservative;The Conservatives;Faction royale;Königsfraktion;;;;;;;;;;;
 KAZ_anarcho_liberal;The Libertains;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 KDS_anarcho_liberal;Terakkipeweran;;;;;;;;;;;;;
 KER_anarcho_liberal;Radical Party;Radical Party;Radical Party;;;;;;;;;;;
 KMK_anarcho_liberal;The Libertains;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
-KMT_anarcho_liberal;Republicans;RÃ©publicains;Republikaner;;;;;;;;;;;
+KMT_anarcho_liberal;Republicans;Républicains;Republikaner;;;;;;;;;;;
 KRL_anarcho_liberal;Aktivistinen vastustuspuolue;Aktivistinen vastustuspuolue;Aktivistinen vastustuspuolue;;Aktivistinen vastustuspuolue;;;;;;;;;
 KRN_radical_republic;Tamil Nadu;;;;;;;;;;;;;
 KRN_radical_republic_ADJ;Tamil;;;;;;;;;;;;;
@@ -101,7 +101,7 @@ LOM_anarcho_liberal;Radicali;Radicali;Radicali;;Radicali;;;;;;;;;
 LOS_anarcho_liberal;Partido Radical;Partido Radical;Partido Radical;;;;;;;;;;;
 LSK_anarcho_liberal;Liberal Economists;;;;;;;;;;;;;
 LUZ_anarcho_liberal;Radical Party;;;;;;;;;;;;;
-LXA_ADJ;Lan Xangi;lan xang;Lan Xangi;Lan Xang;de Lane Xang;Lan Xang;Lan Xangi;LanxangijskÃ½;;;;;;
+LXA_ADJ;Lan Xangi;lan xang;Lan Xangi;Lan Xang;de Lane Xang;Lan Xang;Lan Xangi;Lanxangijský;;;;;;
 LXA_anarcho_liberal;The Radical Faction;;;;;;;;;;;;;
 MAH_conservative;Royal Faction;;;;;;;;;;;;;
 MAH_anarcho_liberal;The Radical Faction;;;;;;;;;;;;;
@@ -162,9 +162,9 @@ SRI_anarcho_liberal;The Radical Faction;;;;;;;;;;;;;
 SUD_anarcho_liberal;Al Anarkiliberali;;;;;;;;;;;;;
 SUL_anarcho_liberal;Radical Faction;;;;;;;;;;;;;
 SWH_anarcho_liberal;Radical Arbeiterpartei;;;;;;;;;;;;;
-SWK_anarcho_liberal;The Radical Faction;Faction radicale;Die radikale Fraktion;;La facciÃ³n radical;;;;;;;;;
+SWK_anarcho_liberal;The Radical Faction;Faction radicale;Die radikale Fraktion;;La facción radical;;;;;;;;;
 SYR_anarcho_liberal;Hizb al-Wataniyyin al-Ahrar;;;;;;;;;;;;;
-SZC_anarcho_liberal;Freedom Party;Parti de la libertÃ©;Freiheitspartei;;;;;;;;;;;;
+SZC_anarcho_liberal;Freedom Party;Parti de la liberté;Freiheitspartei;;;;;;;;;;;;
 TAI_anarcho_liberal;Radical Party;;;;;;;;;;;;;
 TAJ_anarcho_liberal;The Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 TAR_anarcho_liberal;The Libertains;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
@@ -172,7 +172,7 @@ TAS_anarcho_liberal;Radical Liberals;Radical Liberals;Radical Liberals;;;;;;;;;;
 TKM_hms_government;Salor Confederation;;;;;;;;;;;;;
 TKM_anarcho_liberal;The Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 TKS_anarcho_liberal;The Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
-TNT_anarcho_liberal;Freedom Party;Parti de la libertÃ©;Freiheitspartei;;;;;;;;;;;;
+TNT_anarcho_liberal;Freedom Party;Parti de la liberté;Freiheitspartei;;;;;;;;;;;;
 TOU_radical_republic;Toucouleur Republic;;;;;;;;;;;;;
 TRE_anarcho_liberal;Radicali;Radicali;Radicali;;Radicali;;;;;;;;;
 TTB_anarcho_liberal;Butler Party;Butler Party;Butler Party;;;;;;;;;;;
@@ -200,10 +200,10 @@ YAK_anarcho_liberal;The Libertains;Faction radicale;Die radikale Fraktion;;;;;;;
 YUC_anarcho_liberal;Partido Radical;Partido Radical;Partido Radical;;;;;;;;;;;
 ARO_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 ARO_radical_republic;Biafra;Biafra;Biafra;;Biafra;;;;;;;;;
-ARO_radical_republic_ADJ;Biafran;Biafraise;Biafran;;biafreÃ±o;;;;;;;;;
+ARO_radical_republic_ADJ;Biafran;Biafraise;Biafran;;biafreño;;;;;;;;;
 ASH_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 ASH_radical_republic;Ghana;Ghana;Ghana;;Ghana;;;;;;;;;
-ASH_radical_republic_ADJ;Ghanaian;Ghanaian;Ghanaisch;;GhanÃ©s;;;;;;;;;
+ASH_radical_republic_ADJ;Ghanaian;Ghanaian;Ghanaisch;;Ghanés;;;;;;;;;
 AZA_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 BEN_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 BRD_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
@@ -211,17 +211,17 @@ BSH_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;
 BUG_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 CLA_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 DAH_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
-DAM_anarcho_liberal;Freedom Faction;Faction de libertÃ©;Freiheits Fraktion;;;;;;;;;;;;
+DAM_anarcho_liberal;Freedom Faction;Faction de liberté;Freiheits Fraktion;;;;;;;;;;;;
 DAM_radical_republic;Hausaland;Haoussa;Haussaland;;;;;;;;;;;
 DAM_radical_republic_ADJ;Hausa;Haoussa;Hausa;;;;;;;;;;;
-DAR_anarcho_liberal;Freedom Faction;Faction de libertÃ©;Freiheits Fraktion;;;;;;;;;;;;
-DND_anarcho_liberal;Freedom Faction;Faction de libertÃ©;Freiheits Fraktion;;;;;;;;;;;;
+DAR_anarcho_liberal;Freedom Faction;Faction de liberté;Freiheits Fraktion;;;;;;;;;;;;
+DND_anarcho_liberal;Freedom Faction;Faction de liberté;Freiheits Fraktion;;;;;;;;;;;;
 DND_radical_republic;Songhai;Songhay;Songhai;;;;;;;;;;;
-DND_radical_republic_ADJ;Songhai;SonrhaÃ©;;Songhai;;;;;;;;;;;
+DND_radical_republic_ADJ;Songhai;Sonrhaé;;Songhai;;;;;;;;;;;
 GBU_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
-GEL_anarcho_liberal;The Radical Faction;Faction radicale;Die radikale Fraktion;;La facciÃ³n radical;;;;;;;;;
+GEL_anarcho_liberal;The Radical Faction;Faction radicale;Die radikale Fraktion;;La facción radical;;;;;;;;;
 JAL_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
-KBO_anarcho_liberal;Freedom Faction;Faction de libertÃ©;Freiheits Fraktion;;;;;;;;;;;;
+KBO_anarcho_liberal;Freedom Faction;Faction de liberté;Freiheits Fraktion;;;;;;;;;;;;
 KNG_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 KON_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 KUB_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
@@ -229,25 +229,25 @@ KZB_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;
 LBA_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 LOA_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 LUN_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
-MAJ_anarcho_liberal;The Radical Faction;Faction radicale;Die radikale Fraktion;;La facciÃ³n radical;;;;;;;;;
+MAJ_anarcho_liberal;The Radical Faction;Faction radicale;Die radikale Fraktion;;La facción radical;;;;;;;;;
 MAS_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 MAT_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 MNG_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
-MOS_anarcho_liberal;Freedom Faction;Faction de libertÃ©;Freiheits Fraktion;;;;;;;;;;;;
+MOS_anarcho_liberal;Freedom Faction;Faction de liberté;Freiheits Fraktion;;;;;;;;;;;;
 MOS_radical_republic;Burkina Faso;Mossi;Mossi;;Mossi;;;;;;;;;
 MOS_radical_republic_ADJ;Burkinabe;Mossi;Mossi;;Mossi;;;;;;;;;
 OYO_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
-RWA_anarcho_liberal;Freedom Faction;Faction de libertÃ©;Freiheits Fraktion;;;;;;;;;;;;
-SEG_anarcho_liberal;Freedom Faction;Faction de libertÃ©;Freiheits Fraktion;;;;;;;;;;;;
+RWA_anarcho_liberal;Freedom Faction;Faction de liberté;Freiheits Fraktion;;;;;;;;;;;;
+SEG_anarcho_liberal;Freedom Faction;Faction de liberté;Freiheits Fraktion;;;;;;;;;;;;
 SHO_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
-SHW_anarcho_liberal;The Radical Faction;Faction radicale;Die radikale Fraktion;;La facciÃ³n radical;;;;;;;;;
-SUA_anarcho_liberal;Freedom Faction;Faction de libertÃ©;Freiheits Fraktion;;;;;;;;;;;;
+SHW_anarcho_liberal;The Radical Faction;Faction radicale;Die radikale Fraktion;;La facción radical;;;;;;;;;
+SUA_anarcho_liberal;Freedom Faction;Faction de liberté;Freiheits Fraktion;;;;;;;;;;;;
 SUA_radical_republic;Swaziland;;;;;;;;;;;;;
-TOO_anarcho_liberal;Freedom Faction;Faction de libertÃ©;Freiheits Fraktion;;;;;;;;;;;;
+TOO_anarcho_liberal;Freedom Faction;Faction de liberté;Freiheits Fraktion;;;;;;;;;;;;
 TSW_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
-WAD_anarcho_liberal;Freedom Faction;Faction de libertÃ©;Freiheits Fraktion;;;;;;;;;;;;
+WAD_anarcho_liberal;Freedom Faction;Faction de liberté;Freiheits Fraktion;;;;;;;;;;;;
 WRI_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
-WOL_anarcho_liberal;Freedom Faction;Faction de libertÃ©;Freiheits Fraktion;;;;;;;;;;;;
+WOL_anarcho_liberal;Freedom Faction;Faction de liberté;Freiheits Fraktion;;;;;;;;;;;;
 XHO_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 AGC_anarcho_liberal;Radical Faction;;;;;;;;;;;;;
 GAZ_anarcho_liberal;Freedom Faction;;;;;;;;;;;;;
@@ -257,13 +257,13 @@ TRZ_radical_republic_ADJ;Mauritanian;Mauritanien;Mauretanische;;;;;;;;;;;
 AWS_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 GON_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 HAR_anarcho_liberal;Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
-KAF_anarcho_liberal;Freedom Faction;Faction libertÃ©;Freiheit Fraktion;;;;;;;;;;;;
-SID_anarcho_liberal;Freedom Faction;Faction libertÃ©;Freiheit Fraktion;;;;;;;;;;;;
-TIG_anarcho_liberal;Freedom Faction;Faction libertÃ©;Freiheit Fraktion;;;;;;;;;;;;
-USA_presidential_dictatorship;The United States of America;Ã‰tats-Unis;USA;;EE UU;;;;;;;;;
-USA_radical_republic;The United States of America;Ã‰tats-Unis;USA;;EE UU;;;;;;;;;
-CSA_radical_republic;The Confederate States of America;Ã‰tats confÃ©dÃ©rÃ©s d'AmÃ©rique;CSA;;EE CC;;;;;;;;;
-USA_fascist_dictatorship;The United States of America;Ã‰tats-Unis;USA;;EE UU;;;;;;;;;
-USA_democracy;The United States of America;Ã‰tats-Unis;USA;;EE UU;;;;;;;;;
+KAF_anarcho_liberal;Freedom Faction;Faction liberté;Freiheit Fraktion;;;;;;;;;;;;
+SID_anarcho_liberal;Freedom Faction;Faction liberté;Freiheit Fraktion;;;;;;;;;;;;
+TIG_anarcho_liberal;Freedom Faction;Faction liberté;Freiheit Fraktion;;;;;;;;;;;;
+USA_presidential_dictatorship;The United States of America;États-Unis;USA;;EE UU;;;;;;;;;
+USA_radical_republic;The United States of America;États-Unis;USA;;EE UU;;;;;;;;;
+CSA_radical_republic;The Confederate States of America;États confédérés d'Amérique;CSA;;EE CC;;;;;;;;;
+USA_fascist_dictatorship;The United States of America;États-Unis;USA;;EE UU;;;;;;;;;
+USA_democracy;The United States of America;États-Unis;USA;;EE UU;;;;;;;;;
 ARK;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;
 ARK_ADJ;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;Arkhangelsk;
