--- a/GFM/localisation/00_NNM_modifiers.csv
+++ b/GFM/localisation/00_NNM_modifiers.csv
@@ -1,9 +1,9 @@
 Key;English;French;German;Polish;Spanish;Italian;Swedish;Czech;Hungarian;Dutch;Portuguese;Russian;Finnish;
 ANY_ALL;Any province;;;;;;;;;;;;;
 HAS_NOT_GOODS;produces ;;;;;;;;;;;;;
-TRIGMOD_HEADER;The $MONARCHTITLE$ reports that;$head_of_government$ rapporte que;$head_of_government$ berichtet, dass;Kiedy modyfikator zwi¬πzany z okre¬úlonym wydarzeniem wp¬≥ywa na twoje pa√±stwo (np. c¬≥o narzucone przez pa√±stwo trzecie);$head_of_government$ informa de;Quando subisci l'influenza di un modificatore condizionato (ad es. il Pedaggio sullo Stretto);Mikor valami esem√©ny m√≥dosul√°sa van r√°d hat√°ssal (kor√°bbi hang-v√°m);Kdy¬ÅEjste subjektem trojn√°sobn√©ho modifik√°toru;;;;;;
-TRIGMODLOST_HEADER;The $MONARCHTITLE$ reports that;$head_of_government$ rapporte que;$head_of_government$ berichtet, dass;Kiedy modyfikator zwi¬πzany z okre¬úlonym wydarzeniem przestaje oddzia¬≥ywa¬ÅEna twoje pa√±stwo (np. c¬≥o narzucone przez pa√±stwo trzecie);$head_of_government$ informa de;Quando l'effetto di un modificatore condizionato (ad es. il Pedaggio sullo Stretto) cessa;Mikor egy m√≥dos√∫¬ë√°st okoz¬ÅEesem√©ny befejez√µdik (kor√°bbi hang-v√°m);Kdy¬ÅEjste subjektem trojn√°sobn√©ho modifik√°toru.;;;;;;
-TRIGGER_CIV_PROGRESS_LESS;Civilization progress: ¬ßY50¬ßW%;;;;;;;;;;;;;
+TRIGMOD_HEADER;The $MONARCHTITLE$ reports that;$head_of_government$ rapporte que;$head_of_government$ berichtet, dass;Kiedy modyfikator zwiπzany z okre?lonym wydarzeniem wp≥ywa na twoje paÒstwo (np. c≥o narzucone przez paÒstwo trzecie);$head_of_government$ informa de;Quando subisci l'influenza di un modificatore condizionato (ad es. il Pedaggio sullo Stretto);Mikor valami esemÈny mÛdosul·sa van r·d hat·ssal (kor·bbi hang-v·m);Kdy?Ejste subjektem trojn·sobnÈho modifik·toru;;;;;;
+TRIGMODLOST_HEADER;The $MONARCHTITLE$ reports that;$head_of_government$ rapporte que;$head_of_government$ berichtet, dass;Kiedy modyfikator zwiπzany z okre?lonym wydarzeniem przestaje oddzia≥ywa?Ena twoje paÒstwo (np. c≥o narzucone przez paÒstwo trzecie);$head_of_government$ informa de;Quando l'effetto di un modificatore condizionato (ad es. il Pedaggio sullo Stretto) cessa;Mikor egy mÛdos˙?·st okoz?EesemÈny befejezıdik (kor·bbi hang-v·m);Kdy?Ejste subjektem trojn·sobnÈho modifik·toru.;;;;;;
+TRIGGER_CIV_PROGRESS_LESS;Civilization progress: ßY50ßW%;;;;;;;;;;;;;
 had_liberal_revolution;Liberal Revolution has ended;;;;;;;;;;;;;
 liberal_revolution_in_progress;Ongoing Liberal Revolution;;;;;;;;;;;;;
 indian_call_to_union;Indian Nationalism Has Begun;;;;;;;;;;;;;
@@ -63,7 +63,7 @@ war_torn_desc;This province has been devastated by the rebellion.;;;;;;;;;;;;;
 boxer_rebellion;Boxer Rebellion;;;;;;;;;;;;;
 boxer_rebellion_desc;The province is currently held by the Boxer rebels, and is in great disarray.;;;;;;;;;;;;;
 new_country;Newly-Established Country;;;;;;;;;;;;;
-new_country_desc;This country has just been established, and its citizens are willing to work harder to keep it running¬ÅEfor the time being.;;;;;;;;;;;;;
+new_country_desc;This country has just been established, and its citizens are willing to work harder to keep it running?Efor the time being.;;;;;;;;;;;;;
 jewish_diaspora;Jewish Diaspora;;;;;;;;;;;;;
 jewish_diaspora_desc;The Jewish community is organizing in reaction to the creation of Israel.;;;;;;;;;;;;;
 declaration_of_the_rights_of_man;Declaration of the Rights of Man;;;;;;;;;;;;;
@@ -87,7 +87,7 @@ sharia_law_desc;Sharia is the strict moral code and religious law of Islam, cons
 ottoman_oppression;Christian Oppression;;;;;;;;;;;;;
 ottoman_oppression_desc;A number of Ottoman policies regarding Christians within the Empire, such as the Jizya tax and restrictions on work and movement, set the stage for issues in the Balkans for years to come. These policies were not revoked until the Tanzimat Reforms which began in 1839.;;;;;;;;;;;;;
 ottomanism_reform;Imperial Reform Edict;;;;;;;;;;;;;
-ottomanism_reform_desc;The Isl√¢hat Hatt-i H√ºm√¢y√ªnu has established religious equality among the Empire's minorities, and gone a long way towards assuaging some of the concerns of nationalists within our borders.;;;;;;;;;;;;;
+ottomanism_reform_desc;The Isl‚hat Hatt-i H¸m‚y˚nu has established religious equality among the Empire's minorities, and gone a long way towards assuaging some of the concerns of nationalists within our borders.;;;;;;;;;;;;;
 begin_revolution;Revolutionary State;;;;;;;;;;;;;
 begin_revolution_desc;Our country is a fledgling state, founded in the midst of chaos and rebellion. But the people are willing to fight!;;;;;;;;;;;;;
 zemene_mesafint;Zemene Mesafint;;;;;;;;;;;;;
@@ -157,7 +157,7 @@ ambitious_union_boss;Ambitious Union Boss;;;;;;;;;;;;;
 ambitious_union_boss_desc;Our leader hails from the ranks of the blue-collar unions, a man who has worked his way up through the ranks... right to the very top.;;;;;;;;;;;;;
 dour_economist;Dour Economist;;;;;;;;;;;;;
 dour_economist_desc;Our leader has a penchant for numbers and economics, even if he isn't particularly good with people.;;;;;;;;;;;;;
-louis_napoleon_iii;Louis-Napol√©on Bonaparte;;;;;;;;;;;;;
+louis_napoleon_iii;Louis-NapolÈon Bonaparte;;;;;;;;;;;;;
 louis_napoleon_iii_desc;Nephew and heir of Napoleon I, he is a man of the people and carries with him a legacy that makes him seemingly invincible-- even if, at times, his decisions are reckless and of questionable military value.;;;;;;;;;;;;;
 begin_disunited_states;Disunited States;;;;;;;;;;;;;
 begin_disunited_states_desc;With the transition of the United States away from democracy, the Sons of Liberty have arisen in an effort fight what they call tyranny. It will take time for this resistance to calm, and until it does there shall be much talk of secession and even open revolt.;;;;;;;;;;;;;
@@ -238,7 +238,7 @@ irish_republicans_desc;Down with the monarchy! An Irish Free State is the only s
 irish_unionists;Irish Unionists;;;;;;;;;;;;;
 irish_unionists_desc;Ireland is a part of the United Kingdom, now and forever more! We will not turn our back on the monarchy!;;;;;;;;;;;;;
 power_vacuum;Power Vacuum;;;;;;;;;;;;;
-power_vacuum_desc;The government is in a state of transition as it struggles to find its new leader¬Å or fall in the process.;;;;;;;;;;;;;
+power_vacuum_desc;The government is in a state of transition as it struggles to find its new leader? or fall in the process.;;;;;;;;;;;;;
 chinese_substate;Qing Oppression;;;;;;;;;;;;;
 chinese_substate_desc;The oppression by the Qing Emperor has left our nation in disarray.;;;;;;;;;;;;;
 recent_crisis;Recent Crisis;;;;;;;;;;;;;
@@ -262,5 +262,5 @@ dissatisfied_workers;Dissatisfied Workers;;;;;;;;;;;;;
 worker_revolt;Worker Revolt;;;;;;;;;;;;;
 recruitment_cooldown;Conscription Cooldown;;;;;;;;;;;;;
 recruitment_cooldown_desc;We'll have to wait to conscript more peasants.;;;;;;;;;;;;;
-great_depression_desc;A stock market crash in one of the Great Powers has caused a great depression, the effects of which are being felt all around the western world.;Le krach boursier d'une des Grandes Puissances a entra√Æn√© une grande d√©pression dont les effets se font ressentir dans tout le monde civilis√©.;Ein B√∂rsencrash in einer der Gro√üm√§chte hat zu einer Gro√üen Depression gef√ºhrt, deren Auswirkungen auf der ganzen Welt gesp√ºrt werden.;;El hundimiento de la bolsa nacional de uno de los grandes poderes ha causado una gran depresi√≥n, cuyos efectos se perciben en todo el mundo civilizado.;;;;;;;;;
+great_depression_desc;A stock market crash in one of the Great Powers has caused a great depression, the effects of which are being felt all around the western world.;Le krach boursier d'une des Grandes Puissances a entraÓnÈ une grande dÈpression dont les effets se font ressentir dans tout le monde civilisÈ.;Ein Bˆrsencrash in einer der Groﬂm‰chte hat zu einer Groﬂen Depression gef¸hrt, deren Auswirkungen auf der ganzen Welt gesp¸rt werden.;;El hundimiento de la bolsa nacional de uno de los grandes poderes ha causado una gran depresiÛn, cuyos efectos se perciben en todo el mundo civilizado.;;;;;;;;;
 the_female_shortage_desc;A populational deficit means that there are more men than women in China, slowing down population growth and upsetting the mass of single males that will never form a family.;;;;;;;;;;;;;
