--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -116,7 +116,7 @@ PROV2341;San Cosme;;;;;;;;;
 PROV2342;Villarrica;;;;;;;;;
 PROV2343;San Pedro;;;;;;;;;
 PROV4076;Ilha de Bragança;;;;;;;;;
-LSK_colonial_company_4;Rossiysko-Amerikanskaya Kompaniya;;;;;;;;;
+LSK_colonial_company_4;Amerikanskaya Kompaniya;;;;;;;;;
 AUS_702;Westgalizien;;;;;;;;;
 RGS;Rio-Grandense Republic;;;;;;;;;
 DES_theocracy;The Theodemocracy of Zion;;;;;;;;;
