--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -1411,7 +1411,7 @@ PROV3612;North West River;;;;;;;;;;;;
 PROV2625;Cartwright;;;;;;;;;;;;
 PROV3613;Thasus;;;;;;;;;;;;
 PROV3614;San Andrés y Providencia;;;;;;;;;;;;
-PROV3615;Tenosique;;;;;;;;;;;;
+PROV3615;Tanatsik;;;;;;;;;;;;
 PROV3616;Atikokan;;;;;;;;;;;;
 PROV3617;Dagö;;;;;;;;;;;;
 PROV3618;Santa Vitória;;;;;;;;;;;;
