--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -23,10 +23,10 @@ PROV1756;al-Arish;;;;;;;;;;;;;
 PROV1807;Menaka;;;;;;;;;;;;;
 PROV1987;Lubumbashi;;;;;;;;;;;;;
 PROV2165;San Juan Bautista;;;;;;;;;;;;;
-PROV2195;Trujillo;;;;;;;;;;;;;
+PROV2195;Wampusirpi;;;;;;;;;;;;;
 PROV2196;Brus Laguna;;;;;;;;;;;;;
 PROV2198;Granada;;;;;;;;;;;;;
-PROV2203;Cartago;;;;;;;;;;;;;
+PROV2203;Matina;;;;;;;;;;;;;
 PROV2278;La Esmeralda;;;;;;;;;;;;;
 PROV2281;Esmeraldas;;;;;;;;;;;;;
 PROV2519;Maymana;;;;;;;;;;;;;
@@ -138,7 +138,7 @@ PROV3398;Benevento;;;;;;;;;;;;;
 PROV3399;Versailles;;;;;;;;;;;;;
 PROV3400;Bragança;;;;;;;;;;;;;
 PROV3401;Fraga;;;;;;;;;;;;;
-PROV3402;San Antonio;;;;;;;;;;;;;
+PROV3402;Chi'kaannaj;;;;;;;;;;;;;
 PROV3403;Neybe;;;;;;;;;;;;;
 PROV3404;al-Salman;;;;;;;;;;;;;
 PROV3405;Kobajjep;;;;;;;;;;;;;
@@ -925,7 +925,7 @@ PROV109;Cresto Cimarrón;;;;;;;;;;;;;
 PROV105;Tukumakuru;;;;;;;;;;;;;
 PROV218;Wheeling;;;;;;;;;;;;;
 PROV217;Green Bank;;;;;;;;;;;;;
-PROV2187;La Mesilla;;;;;;;;;;;;;
+PROV2187;Ixbul;;;;;;;;;;;;;
 PROV2628;Ocos;;;;;;;;;;;;;
 BAV_601;Niederbayern;;;;;;;;;;;;;
 PROV3249;Old Tientsin;;;;;;;;;;;;;
@@ -981,7 +981,7 @@ PROV2444;Patos de Minas;;;;;;;;;;;;;
 BRZ_2446_1;Minas Gerais;;;;;;;;;;;;;
 PROV3490;Stavanger;;;;;;;;;;;;;
 PROV3491;San Juan;;;;;;;;;;;;;
-PROV3492;Jinotega;;;;;;;;;;;;;
+PROV3492;Mulukuku;;;;;;;;;;;;;
 PROV3493;Wismar;;;;;;;;;;;;;
 PROV823;Siruz;;;;;;;;;;;;;
 PROV825;Kavala;;;;;;;;;;;;;
@@ -1389,3 +1389,11 @@ PROV4060;Iké'yú Tú'ichii;;;;;;;;;;;;;
 PROV4061;Yritila;;;;;;;;;;;;;
 PROV4062;Wohihu;;;;;;;;;;;;;
 PROV4063;Nanatsoho;;;;;;;;;;;;;
+PROV4077;Nacaxtlán;;;;;;;;;;;;;
+PROV4078;Chunhuhub;;;;;;;;;;;;;
+PROV4079;Lama'an Ai;;;;;;;;;;;;;
+PROV4080;Kuum Utia'al;;;;;;;;;;;;;
+PROV4081;Cahuita;;;;;;;;;;;;;
+PROV4082;Gaigirgordub;;;;;;;;;;;;;
+PROV4083;Darién;;;;;;;;;;;;;
+PROV4084;Qutalleq;;;;;;;;;;;;;
