--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -47,7 +47,7 @@ PROV3307;Görice;;;;;;;;;;;;;
 PROV3308;Piskopoya;;;;;;;;;;;;;
 PROV3309;Hinche;;;;;;;;;;;;;
 PROV3310;Huntsville;;;;;;;;;;;;;
-PROV3311;Tupelo;;;;;;;;;;;;;
+PROV3311;Pontotoc;;;;;;;;;;;;;
 PROV3312;Lons;;;;;;;;;;;;;
 PROV3313;Gap;;;;;;;;;;;;;
 PROV3314;Boulogne;;;;;;;;;;;;;
@@ -1382,6 +1382,7 @@ PROV4033;Albuquerque;;;;;;;;;;;;;
 PROV4034;Santa Fe;;;;;;;;;;;;;
 PROV4035;Tïkamïkatï;;;;;;;;;;;;;
 PROV4036;Fort Gibson;;;;;;;;;;;;;
+PROV4038;Nakshobi;;;;;;;;;;;;;
 PROV4043;Nyút'ach;;;;;;;;;;;;;
 PROV4052;Tucsón;;;;;;;;;;;;;
 PROV4059;Caborca;;;;;;;;;;;;;
