--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -58,7 +58,7 @@ PROV2444;Paracatu;;;;;;;;;
 PROV3445;Itabira;;;;;;;;;
 PROV3446;Rio Pardo de Minas;;;;;;;;;
 PROV3653;Tapanahony;;;;;;;;;
-PROV3654;Auburn;;;;;;;;;
+PROV3654;Opliwa'lako;;;;;;;;;
 PROV3655;Greenville;;;;;;;;;
 PROV3656;Huntington;;;;;;;;;
 PROV3657;Abingdon;;;;;;;;;
