--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1383,6 +1383,10 @@ PROV4034;Santa Fe;;;;;;;;;;;;;
 PROV4035;Tïkamïkatï;;;;;;;;;;;;;
 PROV4036;Fort Gibson;;;;;;;;;;;;;
 PROV4038;Nakshobi;;;;;;;;;;;;;
+PROV4039;Tuskoloosa;;;;;;;;;;;;;
+PROV4040;Kusawatu;;;;;;;;;;;;;
+PROV4041;Columbus;;;;;;;;;;;;;
+PROV4042;Tampa;;;;;;;;;;;;;
 PROV4043;Nyút'ach;;;;;;;;;;;;;
 PROV4052;Tucsón;;;;;;;;;;;;;
 PROV4059;Caborca;;;;;;;;;;;;;
