--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -8761,8 +8761,8 @@ PROV195;Birmingham;Birmingham;Birmingham;;Birmingham;;;;;;;;;
 PROV197;Mobile;Mobile;Mobile;;Mobile;;;;;;;;;
 PROV198;Tallahassee;Tallahassee;Tallahassee;;Tallahassee;;;;;;;;;
 PROV199;St Augustine;St Augustine;St Augustine;;St Augustine;;;;;;;;;
-PROV200;Tampa;Tampa;Tampa;;Tampa;;;;;;;;;
-PROV201;Atlanta;Atlanta;Atlanta;;Atlanta;;;;;;;;;
+PROV200;Ahapopka;Ahapopka;Ahapopka;;Ahapopka;;;;;;;;;
+PROV201;Atseechota;Atseechota;Atseechota;;Atseechota;;;;;;;;;
 PROV202;Valdosta;Valdosta;Valdosta;;Valdosta;;;;;;;;;
 PROV203;Bermuda;Bermuda;Bermuda;;Bermudas;;;;;;;;;
 PROV204;Savannah;Savannah;Savannah;;Savannah;;;;;;;;;
