--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1402,3 +1402,5 @@ PROV4081;Cahuita;;;;;;;;;;;;;
 PROV4082;Gaigirgordub;;;;;;;;;;;;;
 PROV4083;Darién;;;;;;;;;;;;;
 PROV4084;Qutalleq;;;;;;;;;;;;;
+PROV4085;Miami;;;;;;;;;;;;;
+PROV4086;Timiskaming;;;;;;;;;;;;;
