--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -8679,7 +8679,7 @@ PROV56;Kingston;Kingston;Kingston;;Kingston;;;;;;;;;
 PROV58;Montreal;Montréal;Montreal;;Montreal;;;;;;;;;
 PROV61;Chicoutimi;Chicoutimi;Chicoutimi;;Chicoutimi;;;;;;;;;
 PROV62;Sept-Îles;Sept-Îles;Sept-Iles;;Sept-Iles;;;;;;;;;
-PROV63;Temiscaming;Temiscaming;Temiscaming;;Temiscaming;;;;;;;;;
+PROV63;Nitchequon;Nitchequon;Nitchequon;;Nitchequon;;;;;;;;;
 PROV64;Trois-Rivières;Trois-Rivières;Trois-Rivieres;;Trois-Rivieres;;;;;;;;;
 PROV65;Quebec City;Québec;Quebec City;;Ciudad de Quebec;;;;;;;;;
 PROV66;Sherbrooke;Sherbrooke;Sherbrooke;;Sherbrooke;;;;;;;;;
