--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -1464,7 +1464,7 @@ core_eesti_danes_desc;§RGain 3 infamy§! Now that we have achieved dominance over
 statto_da_mar_title;Claim the Statto da Mar;;;;;;;;;;;;
 statto_da_mar_desc;§RGain 3 infamy§! With our position in Dalmatia now secured, we can finally turn our eyes East once more. Venice has been deprived of its overseas dominions for too long. The time has come for us to reclaim our rightful lands! For Venice!;;;;;;;;;;;;;;
 PROV201;Atseechota;Atseechota;Atseechota;;Atseechota;;;;;;;;;
-PROV191;Ross's Landing;Ross's Landing;Ross's Landing;;Ross's Landing;;;;;;;;;
+PROV191;Hiwalsee;Hiwalsee;Hiwalsee;;Hiwalsee;;;;;;;;;
 founding_atlanta_title;Found Atlanta;;;;;;;;;;;;;
 founding_atlanta_desc;With the growth of our railroad system in Georgia, communities have gathered around the terminus of the Western and Atlantic Railroad near the Chattahoochee. Incorporating the area as a new city, Atlanta, will bring prosperity and growth to the as-yet rural region.;;;;;;;;;;;;;
 PROV159;Juneautown;;;;;;;;;;;;;
