KN or whatever I'm not Unitedstatesian

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -373,8 +373,8 @@ PROV93;Fort Hall;;;;;;;;;;;;;
 PROV123;Fort Robidoux;;;;;;;;;;;;;
 PROV124;Bordeaux's Post;;;;;;;;;;;;;
 PROV125;Fontenelle's Post;;;;;;;;;;;;;
-PROV126;Fort Leavenworth;;;;;;;;;;;;;
-PROV127;Fort Mann;;;;;;;;;;;;;
+PROV126;Hujé Tan'ga;;;;;;;;;;;;;
+PROV127;'Gúhàle;;;;;;;;;;;;;
 PROV113;Gallatin Valley;;;;;;;;;;;;;
 PROV117;Fort Clark;;;;;;;;;;;;;
 PROV118;Fort James;;;;;;;;;;;;;
@@ -900,7 +900,7 @@ PRU_684;Upper Silesia;;;;;;;;;;;;;
 PROV79;Fort Vancouver;;;;;;;;;;;;;
 PROV18;Dawson's Creek;;;;;;;;;;;;;
 PROV129;Piakwasiahunu'bi;;;;;;;;;;;;;
-PROV128;Hugoton;;;;;;;;;;;;;
+PROV128;Yaparuhka;;;;;;;;;;;;;
 PROV638;Eperies;;;;;;;;;;;;;
 AUS_625;Böhmen;;;;;;;;;;;;;
 AUS_626;Mähren;;;;;;;;;;;;;
@@ -1382,6 +1382,7 @@ PROV4033;Albuquerque;;;;;;;;;;;;;
 PROV4034;Santa Fe;;;;;;;;;;;;;
 PROV4035;Tïkamïkatï;;;;;;;;;;;;;
 PROV4036;Fort Gibson;;;;;;;;;;;;;
+PROV4037;Tóppík'é;;;;;;;;;;;;;
 PROV4038;Nakshobi;;;;;;;;;;;;;
 PROV4039;Tuskoloosa;;;;;;;;;;;;;
 PROV4040;Kusawatu;;;;;;;;;;;;;
@@ -1394,6 +1395,7 @@ PROV4060;Iké'yú Tú'ichii;;;;;;;;;;;;;
 PROV4061;Yritila;;;;;;;;;;;;;
 PROV4062;Wohihu;;;;;;;;;;;;;
 PROV4063;Nanatsoho;;;;;;;;;;;;;
+PROV4065;Thóqàhyòp;;;;;;;;;;;;;
 PROV4077;Nacaxtlán;;;;;;;;;;;;;
 PROV4078;Chunhuhub;;;;;;;;;;;;;
 PROV4079;Lama'an Ai;;;;;;;;;;;;;
