--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -8718,7 +8718,7 @@ PROV143;Little Rock;Little Rock;Little Rock;;Little Rock;;;;;;;;;
 PROV144;Hot Springs;Hot Springs;Hot Springs;;Hot Springs;;;;;;;;;
 PROV145;Fayetteville;Fayetteville;Fayetteville;;Fayetteville;;;;;;;;;
 PROV146;St Louis;St Louis;St Louis;;St. Louis;;;;;;;;;
-PROV147;Joplin;Joplin;Joplin;;Joplin;;;;;;;;;
+PROV147;Springfield;Springfield;Springfield;;Springfield;;;;;;;;;
 PROV148;Malden;Malden;Malden;;Malden;;;;;;;;;
 PROV149;Mixa Sga'hü;Mixa Sga'hü;Mixa Sga'hü;;Mixa Sga'hü;;;;;;;;;
 PROV150;Kansas City;Kansas City;Kansas City;;Kansas City;;;;;;;;;
