--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -931,12 +931,12 @@ OJB_semi_constitutional_empire;Tecumseh Confederation;;;;;;;;;;;;;
 OJB_constitutional_empire;Tecumseh Confederation;;;;;;;;;;;;;
 DAK;Dakota Republic;;;;;;;;;;;;;
 DAK_ADJ;Dakotan;;;;;;;;;;;;;
-DAK_absolute_monarchy;Sioux;;;;;;;;;;;;;
-DAK_absolute_monarchy_ADJ;Sioux;;;;;;;;;;;;;
-DAK_prussian_constitutionalism;Sioux;;;;;;;;;;;;;
-DAK_prussian_constitutionalism_ADJ;Sioux;;;;;;;;;;;;;
-DAK_hms_government;Sioux;;;;;;;;;;;;;
-DAK_hms_government_ADJ;Sioux;;;;;;;;;;;;;
+DAK_absolute_monarchy;Seven Fires Confederacy;;;;;;;;;;;;;
+DAK_absolute_monarchy_ADJ;Šakówin;;;;;;;;;;;;;
+DAK_prussian_constitutionalism;Seven Fires Confederacy;;;;;;;;;;;;;
+DAK_prussian_constitutionalism_ADJ;Šakówin;;;;;;;;;;;;;
+DAK_hms_government;Seven Fires Confederacy;;;;;;;;;;;;;
+DAK_hms_government_ADJ;Šakówin;;;;;;;;;;;;;
 DAK_reactionary;White Eagle Faction;;;;;;;;;;;;;
 DAK_conservative;Traditionalists;;;;;;;;;;;;;
 DAK_liberal;Republican Faction;;;;;;;;;;;;;
