orinoco delta, essequibo

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1406,3 +1406,5 @@ PROV4083;Darién;;;;;;;;;;;;;
 PROV4084;Qutalleq;;;;;;;;;;;;;
 PROV4085;Miami;;;;;;;;;;;;;
 PROV4086;Timiskaming;;;;;;;;;;;;;
+PROV4087;Angostura;;;;;;;;;;;;;
+PROV4088;Queenstown;;;;;;;;;;;;;
