--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10412,9 +10412,9 @@ PROV2263;Leticia;Leticia;Leticia;;Leticia;;;;;;;;;
 PROV2264;Caracas;Caracas;Caracas;;Caracas;;;;;;;;;
 PROV2265;Guanare;Guanare;Guanare;;Guanare;;;;;;;;;
 PROV2266;Calabozo;Calabozo;Calabozo;;Calabozo;;;;;;;;;
-PROV2267;Cumaná;Cumana;Cumana;;Cumaná;;;;;;;;;
-PROV2268;San Felipe;San Felipe;San Felipe;;San Felipe;;;;;;;;;
-PROV2269;Güiria;Guiria;Guiria;;Guiria;;;;;;;;;
+PROV2267;Barcelona;Barcelona;Barcelona;;Barcelona;;;;;;;;;
+PROV2268;Valencia;Valencia;Valencia;;Valencia;;;;;;;;;
+PROV2269;Cumaná;Cumaná;Cumaná;;Cumaná;;;;;;;;;
 PROV2270;Maracaibo;Maracaibo;Maracaibo;;Maracaibo;;;;;;;;;
 PROV2271;Valera;Valera;Valera;;Valera;;;;;;;;;
 PROV2272;Coro;Coro;Coro;;Coro;;;;;;;;;
