--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -339,10 +339,10 @@ EVT1500001OPTA;Honey! Get my covered wagon!;;;;;;;;;;;;;
 EVTNAME1500002;The French Refuse!;;;;;;;;;;;;;
 EVTDESC1500002;\n\nUnfortunate news has come from the Foreign Ministry today: the French have refused our offer to purchase Madagascar. This setback has endangered the prospects of ever establishing our own overseas colony, and already some warhawks are calling for... alternative methods of acquisition.;;;;;;;;;;;;;
 EVT1500002OPTA;We are a culturally European nation, and we will have colonies of our own, one way or another.;;;;;;;;;;;;;
-ryukyu_slot_1;§bThe islands of;;;;;;;;;;;;;
-ryukyu_slot_2;have been brought under the control of the;;;;;;;;;;;;;
-ryukyu_slot_3;We've already dispatched bureaucrats to;;;;;;;;;;;;;
+ryukyu_slot_1;§bThe islands of§p;;;;;;;;;;;;;
+ryukyu_slot_2;have been brought under the control of the§g;;;;;;;;;;;;;
+ryukyu_slot_3;We've already dispatched bureaucrats to§p;;;;;;;;;;;;;
 ryukyu_slot_4;to further integrate its land;;;;;;;;;;;;;
-ryukyu_slot_5;and the world will be informed of our legitimate claim to;;;;;;;;;;;;;
+ryukyu_slot_5;and the world will be informed of our legitimate claim to§p;;;;;;;;;;;;;
 ryukyu_end;and its surrounding islands;;;;;;;;;;;;;
 ryukyu_dynamic_test;gains cores on;;;;;;;;;;;;;
