--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -118,6 +118,8 @@ PROV2343;San Pedro;;;;;;;;;
 PROV4076;Ilha de Bragança;;;;;;;;;
 LSK_colonial_company_4;Amerikanskaya Kompaniya;;;;;;;;;
 AUS_702;Westgalizien;;;;;;;;;
+MZN;Manzanas;;;;;;;;;
+PROV4089;Calefú;;;;;;;;;
 RGS;Rio-Grandense Republic;;;;;;;;;
 DES_theocracy;The Theodemocracy of Zion;;;;;;;;;
 RGS_absolute_monarchy;Reino Rio-grandense;;;;;;;;;
