--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -119,6 +119,9 @@ PROV4076;Ilha de Bragança;;;;;;;;;
 LSK_colonial_company_4;Amerikanskaya Kompaniya;;;;;;;;;
 AUS_702;Westgalizien;;;;;;;;;
 MZN;Manzanas;;;;;;;;;
+MZN_ADJ;Manzanas;;;;;;;;;
+YAN;Yaqui;;;;;;;;;
+YAN_ADJ;Yaqui;;;;;;;;;
 PROV4089;Calefú;;;;;;;;;
 RGS;Rio-Grandense Republic;;;;;;;;;
 DES_theocracy;The Theodemocracy of Zion;;;;;;;;;
