--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -1,4 +1,6 @@
 Key;English;French;German;Polish;Spanish;Italian;Swedish;Czech;Hungarian;Dutch;Portuguese;Russian;Finnish;
+HUN_colonial_company_3;Transleithania;;;;;;;;;;;;;
+GLM_colonial_company_3;Konigreich Galizien-Lodomerian;;;;;;;;;;;;;
 FLA_colonial_company;The Free State of Antwerp;;;;;;;;;;;;;
 LIB_colonial_company;Dominion of Liberia;;;;;;;;;;;;;
 LIB_colonial_company_2;Libéria;;;;;;;;;;;;;
