--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -109,6 +109,7 @@ PROV3652;Iauarí;;;;;;;;;
 PROV3651;Uru'ku;;;;;;;;;
 PROV2403;Ya'ú;;;;;;;;;
 PROV2408;Eruzu-M'Na;;;;;;;;;
+PROV4091;Trinidad;;;;;;;;;
 PROV2567;Iauaretê;;;;;;;;;
 PROV3750;Curuai;;;;;;;;;
 PROV2340;Pilar;;;;;;;;;
