--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -110,6 +110,7 @@ PROV3651;Uru'ku;;;;;;;;;
 PROV2403;Ya'ú;;;;;;;;;
 PROV2408;Eruzu-M'Na;;;;;;;;;
 PROV4091;Trinidad;;;;;;;;;
+PROV4006;San ignacio;;;;;;;;;
 PROV2567;Iauaretê;;;;;;;;;
 PROV3750;Curuai;;;;;;;;;
 PROV2340;Pilar;;;;;;;;;
