--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -1052,7 +1052,7 @@ GAB_fascist;People's Unity Party;;;;;;;;;;;;;
 GCO;Gran Colombia;;;;;;;;;;;;;
 GCO_ADJ;Colombian;;;;;;;;;;;;;
 GCO_absolute_monarchy;New Granada;;;;;;;;;;;;;
-GCO_democracy;United States of Colombia;;;;;;;;;;;;;
+GCO_democracy;The Republic of Colombia;;;;;;;;;;;;;
 GCO_proletarian_dictatorship;Bolivarian Republic of Colombia;;;;;;;;;;;;;
 GCO_fascist_dictatorship;Martial Republic of Colombia;;;;;;;;;;;;;
 GCO_prussian_constitutionalism;New Granada;;;;;;;;;;;;;
