--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -124,6 +124,10 @@ MZN;Calefú;;;;;;;;;
 MZN_ADJ;Calefú;;;;;;;;;
 YAN;Yaqui;;;;;;;;;
 YAN_ADJ;Yaqui;;;;;;;;;
+RAN;Ranquel;;;;;;;;;
+RAN_ADJ;Ranquel;;;;;;;;;
+SLN;Salinas;;;;;;;;;
+SLN_ADJ;Salinas;;;;;;;;;
 PROV4089;Calefú;;;;;;;;;
 PROV4090;Cochamó;;;;;;;;;
 RGS;Rio-Grandense Republic;;;;;;;;;
