--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -490,7 +490,9 @@ ALB_colonial_company;Albania;;;;;;;;;;;;;
 ALB_colonial_company_2;Albanie;;;;;;;;;;;;;
 ALB_colonial_company_3;Albanien;;;;;;;;;;;;;
 ALB_colonial_company_4;Protettorato d'Albania;;;;;;;;;;;;;
-NEJ_colonial_company;Protectorate of Nejd;;;;;;;;;;;;;
+NEJ_colonial_company;Arabia;;;;;;;;;;;;;
+NEJ_colonial_company_2;Protectorat d'Arabie;;;;;;;;;;;;;
+NEJ_colonial_company_3;Schutzgebiete Arabien;;;;;;;;;;;;;
 NYE_colonial_company;North Yemen;;;;;;;;;;;;;
 NYE_colonial_company_2;Nord-Yémen;;;;;;;;;;;;;
 NYE_colonial_company_3;Nord-Jemen;;;;;;;;;;;;;
