--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -704,7 +704,7 @@ JAP_1088;Ezo;;;;;;;;;;;;;
 AST_1097;New Caledonia;;;;;;;;;;;;;
 PER_1116;Mazandaran;;;;;;;;;;;;;
 PER_1128;Lorestan;;;;;;;;;;;;;
-PER_1132;Khuzestan;;;;;;;;;;;;;
+PER_1132;Arabestan;;;;;;;;;;;;;
 PER_1136;Fars;;;;;;;;;;;;;
 PER_1140;Kerman;;;;;;;;;;;;;
 AFG_1209;Pashtunistan;;;;;;;;;;;;;
