--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -90,7 +90,7 @@ PROV934;Diwaniyah;;;;;;;;;;;;;
 PROV1049;Novorossiysk;;;;;;;;;;;;;
 PROV1099;Alexandropol;;;;;;;;;;;;;
 PROV1105;Yelizavetpol;;;;;;;;;;;;;
-PROV1119;Deh-e Bala;;;;;;;;;;;;;
+PROV1119;Poshtkuh;;;;;;;;;;;;;
 PROV1127;Esfahan;;;;;;;;;;;;;
 PROV1128;Soltanabad;;;;;;;;;;;;;
 PROV1136;Bushehr;;;;;;;;;;;;;
