forgot to commit

--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -118,6 +118,9 @@ PROV2341;San Cosme;;;;;;;;;
 PROV2342;Villarrica;;;;;;;;;
 PROV2343;San Pedro;;;;;;;;;
 PROV4076;Ilha de Bragança;;;;;;;;;
+PROV4093;Purrán;;;;;;;;;
+PUR;Purrán;;;;;;;;;
+PUR_ADJ;Purrán;;;;;;;;;
 LSK_colonial_company_4;Amerikanskaya Kompaniya;;;;;;;;;
 AUS_702;Westgalizien;;;;;;;;;
 MZN;Calefú;;;;;;;;;
