--- a/GFM/localisation/FlavoursModNewCountries.csv
+++ b/GFM/localisation/FlavoursModNewCountries.csv
@@ -34,9 +34,9 @@ MEX_constitutional_empire;The Mexican Empire;;;;;;;;;;;;;
 BRZ_absolute_empire;The Empire of Brazil;;;;;;;;;;;;;
 BRZ_semi_constitutional_empire;The Empire of Brazil;;;;;;;;;;;;;
 BRZ_constitutional_empire;The Empire of Brazil;;;;;;;;;;;;;
-PNJ_absolute_empire;The Sikh Empire;;;;;;;;;;;;;
-PNJ_semi_constitutional_empire;The Sikh Empire;;;;;;;;;;;;;
-PNJ_constitutional_empire;The Sikh Empire;;;;;;;;;;;;;
+PNJ_absolute_empire;The Khalasa Raj;;;;;;;;;;;;;
+PNJ_semi_constitutional_empire;The Khalasa Raj;;;;;;;;;;;;;
+PNJ_constitutional_empire;The Khalasa Raj;;;;;;;;;;;;;
 QNG_absolute_empire;The Qing Empire;;;;;;;;;;;;;
 QNG_semi_constitutional_empire;The Qing Empire;;;;;;;;;;;;;
 QNG_constitutional_empire;The Qing Empire;;;;;;;;;;;;;
